--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "prefix": "",
+  "prefix": "*",
   "sahip": "732735517904470086",
-  "token": ""
+  "token": "ODU5MDM5NDYxMjYxOTY3MzYw.YNm41w.Fgy05i465P2v77HuI5rBhGtPkv4"
 }
